--- a/index.html
+++ b/index.html
@@ -224,6 +224,56 @@
 
     <hr class="m-0" />
 
+    <section class="resume-section p-3 p-sm-5 d-flex align-items-center" id="awards">
+      <div class="w-100">
+        <h2 class="mb-5">Portfolio</h2>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="img/Bandeji.PNG" alt="Bandeji">
+          <div class="carousel-caption d-none d-md-block">
+            <p style="color:white; background-color:black; opacity: 0.75;border-radius: 25px">
+              <strong>A social platform for musicans to connect with one another</strong>
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/FlickFinder.PNG" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <p style="color:black; background-color:white; opacity: 0.75;border-radius: 25px">
+              <strong>Keeps track of your favorite movies and provides targeted recommendations</strong>
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/EventFinder.PNG" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+            <p style="color:black; background-color:white; opacity: 0.75;border-radius: 25px">
+              <strong>Search for upcoming shows, concerts, games and displays event location</strong>
+            </p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    </div>
+    </section>
+<!-- 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
@@ -274,7 +324,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   </div>
 
   <!-- Bootstrap core JavaScript -->
