Added remaining images to carosel with comments

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/FlickFinder.PNG" alt="Second slide">
+          <img class="d-block w-100" src="img/FlickFinder.PNG" alt="FlickFinder">
           <div class="carousel-caption d-none d-md-block">
             <p style="color:black; background-color:white; opacity: 0.75;border-radius: 25px">
               <strong>Keeps track of your favorite movies and provides targeted recommendations</strong>
@@ -254,10 +254,34 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="img/EventFinder.PNG" alt="Third slide">
+          <img class="d-block w-100" src="img/EventFinder.PNG" alt="EventFinder">
           <div class="carousel-caption d-none d-md-block">
             <p style="color:black; background-color:white; opacity: 0.75;border-radius: 25px">
               <strong>Search for upcoming shows, concerts, games and displays event location</strong>
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/Employee Tracker.PNG" alt="Employee Tracker">
+          <div class="carousel-caption d-none d-md-block">
+            <p style="color:black; background-color:white; opacity: 0.75;border-radius: 25px">
+              <strong>Manages company departments, positions, and employees</strong>
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/Quiz.PNG" alt="Javascript Quiz">
+          <div class="carousel-caption d-none d-md-block">
+            <p style="color:white; background-color:black; opacity: 0.75;border-radius: 25px">
+              <strong>Timed javascript themed quiz game with scores</strong>
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="img/Password.PNG" alt="Password Generator">
+          <div class="carousel-caption d-none d-md-block">
+            <p style="color:white; background-color:black; opacity: 0.75;border-radius: 25px">
+              <strong>Generates secure passwords based off user selected criteria</strong>
             </p>
           </div>
         </div>
