Redid portfolio section to add github links

--- a/index.html
+++ b/index.html
@@ -227,7 +227,84 @@
     <section class="resume-section p-3 p-sm-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div class="row portfolio-row">
+          <div class="col-md-4">
+            <div class="card">
+              <img class="img-fluid" src="img/Bandeji.PNG" alt="Bandeji">
+              <div class="card-body">
+                <h4 class="card-title">Bandeji</h4>
+                <p class="card-text">A social platform for musicans to connect with one another</p>
+                <hr>
+                <a href="http://bandeji.herokuapp.com/login" class="btn btn-primary" target="_blank">Visit</a>
+                <a href="https://github.com/sgutierrez-19/Bandeji" class="btn btn-primary" target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img class="img-fluid" src="img/FlickFinder.PNG" alt="FlickFinder">
+              <div class="card-body">
+                <h4 class="card-title">FlickFinder</h4>
+                <p class="card-text">Keeps track of your favorite movies and provides targeted recommendations</p>
+                <hr>
+                <a href="https://flickfinder-project2.herokuapp.com/home" class="btn btn-primary" target="_blank">Visit</a>
+                <a href="https://github.com/sgutierrez-19/FlickFinder" class="btn btn-primary" target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img class="img-fluid" src="img/EventFinder.PNG" alt="EventFinder">
+              <div class="card-body">
+                <h4 class="card-title">EventFinder</h4>
+                <p class="card-text">Search for upcoming shows, concerts, games and displays event location</p>
+                <hr>
+                <a href="https://sgutierrez-19.github.io/Project-One/" class="btn btn-primary" target="_blank">Visit</a>
+                <a href="https://github.com/sgutierrez-19/EventFinder" class="btn btn-primary" target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row portfolio-row">
+          <div class="col-md-4">
+            <div class="card">
+              <img class="img-fluid portfolio-img" src="img/Employee Tracker.PNG" alt="EmployeeTracker">
+              <div class="card-body">
+                <h4 class="card-title">EmployeeTracker</h4>
+                <p class="card-text">Manages company departments, positions, and employees</p>
+                <hr>
+                <a href="https://github.com/sgutierrez-19/EmployeeTracker" class="btn btn-primary" target="_blank">Visit</a>
+                <a href="https://github.com/sgutierrez-19/EmployeeTracker" class="btn btn-primary" target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img class="img-fluid portfolio-img" src="img/Quiz.PNG" alt="Javascript Quiz">
+              <div class="card-body">
+                <h4 class="card-title">Timed Javascript Quiz</h4>
+                <p class="card-text">Timed javascript themed quiz game with scores</p>
+                <hr>
+                <a href="https://sgutierrez-19.github.io/Timed-Javascript-Quiz/" class="btn btn-primary" target="_blank">Visit</a>
+                <a href="https://github.com/sgutierrez-19/Timed-Javascript-Quiz" class="btn btn-primary" target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img class="img-fluid portfolio-img" src="img/newPassword.PNG" alt="Password Generator">
+              <div class="card-body">
+                <h4 class="card-title">Password Generator</h4>
+                <p class="card-text">Generates secure passwords based off user selected criteria</p>
+                <hr>
+                <a href="https://sgutierrez-19.github.io/Password-Generator/" class="btn btn-primary" target="_blank">Visit</a>
+                <a href="https://github.com/sgutierrez-19/Password-Generator" class="btn btn-primary" target="_blank">Github</a>
+              </div>
+            </div>
+          </div>
+        </div>
+    <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -316,7 +393,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div> -->
     </div>
     </section>
 <!-- 
